# simple-traefik-forwardauth

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: release.yml
src/: main.rs
