[package]
name = "simple-traefik-forwardauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.13", features = ["headers"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-macros = "0.3.8"
axum-extra = { version = "0.8.0", features = ["cookie-private"] }
hex = "0.4.3"
openidconnect = { version = "3.3.1", default-features = false }
reqwest = { version = "0.11.13", default_features = false, features = [
    "rustls-tls",
    "trust-dns",
] }
accept-header = "0.2.3"
mime = "0.3.17"
oauth2 = "4.4.2"
tower-http = { version = "0.4.4", features = ["full"] }
tower-layer = "0.3.2"
regex = "1.9.5"
